--- a/WEB API 2NMCT1/WEB API 2NMCT1.csproj
+++ b/WEB API 2NMCT1/WEB API 2NMCT1.csproj
@@ -215,6 +215,8 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccountInfoController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -225,6 +227,8 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountInfoDA.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CustomerDA.cs" />
+    <Compile Include="Models\EmployeeDA.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\OrganisationDA.cs" />
     <Compile Include="Models\ProductsDA.cs" />
