--- a/WEB API 2NMCT1/WEB API 2NMCT1.csproj
+++ b/WEB API 2NMCT1/WEB API 2NMCT1.csproj
@@ -218,10 +218,13 @@
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\CustomerRegisterController.cs" />
+    <Compile Include="Controllers\EmployeeRegisterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginRegisterController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\ProductRegisterController.cs" />
+    <Compile Include="Controllers\RegisterController.cs" />
+    <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -235,6 +238,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\OrganisationDA.cs" />
     <Compile Include="Models\ProductsDA.cs" />
+    <Compile Include="Models\RegisterDA.cs" />
+    <Compile Include="Models\StatisticsDA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
