--- a/WEB API 2NMCT1/bin/WEB API 2NMCT1.dll.config
+++ b/WEB API 2NMCT1/bin/WEB API 2NMCT1.dll.config
@@ -16,7 +16,7 @@
       providerName="System.Data.SqlClient" />
     <add name="ClientDB" connectionString="Data Source=MCT-NIELS\DATAMANAGEMENT;Initial Catalog=Cashless_project_ClientDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="AdminDB" connectionString="Data Source=MCT-NIELS\DATAMANAGEMENT;Initial Catalog=CashlessAdmin;Integrated Security=True"
+    <add name="AdminDB" connectionString="Data Source=MCT-NIELS\DATAMANAGEMENT;Initial Catalog=Cashless_project_AdminDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="WEB_API_2NMCT1.Properties.Settings.ClientDB" connectionString="Data Source=MCT-NIELS\DATAMANAGEMENT;Initial Catalog=Cashless_project_ClientDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
@@ -95,13 +95,13 @@
   <applicationSettings>
     <WEB_API_2NMCT1.Properties.Settings>
       <setting name="DBNAME" serializeAs="String">
-        <value>KVKortrijk</value>
+        <value>FCBarcelona</value>
       </setting>
       <setting name="DBLOGIN" serializeAs="String">
-        <value>KVKortrijk</value>
+        <value>FCBarcelona</value>
       </setting>
       <setting name="DBPASS" serializeAs="String">
-        <value>kvk</value>
+        <value>fcb</value>
       </setting>
     </WEB_API_2NMCT1.Properties.Settings>
   </applicationSettings>
