--- a/Terminal_Customer/Terminal_Customer.csproj
+++ b/Terminal_Customer/Terminal_Customer.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Aspose.BarCode.WPF">
+      <HintPath>..\..\Barcode_scanner\packages\Aspose.BarCode.6.6.0\lib\net4.0-wpf\Aspose.BarCode.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="beid35libCS, Version=3.5.3.6193, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Documents\Belgium Identity Card SDK\beidlib\dotNet\bin\beid35libCS.dll</HintPath>
@@ -56,6 +59,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\packages\Microsoft.Net.Http.2.2.28\lib\net45\System.Net.Http.Extensions.dll</HintPath>
